--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Bigilla";
-  src: url("/Bigilla.otf");
+  src: url("./Bigilla.otf");
   /* https://www.behance.net/gallery/93242287/BIGILLA-FREE-DISPLAY-SERIF-TYPEFACE */
 }
 
